@@ -36,7 +36,7 @@ public final class UserBase {
             //file = Paths.get("/home/kasia/IdeaProjects/projekt_konsolowy/jjdzr9-energetic-rangers/energetic_rangers_console/src/main/resources/usersBase.csv").toFile();
             //tylko wklej swoją ścieżkę absolutną
             //TAK SAMO MUSI BYĆ W KLASIE CreateUser!
-            file = Path.of("src", "main", "resources", "usersBase.csv").toFile();
+            file = Paths.get("/Users/java/pracaDomowaGit/jjdzr9-energetic-rangers/energetic_rangers_console/src/main/resources/usersBase.csv").toFile();
 
         } catch (NullPointerException e) {
             System.err.println("Not found path to base of users");
